Compatible with java 8